--- a/example/demo.html
+++ b/example/demo.html
@@ -9,7 +9,7 @@
 	<script src="https://rawgit.com/scottjehl/Respond/master/dest/respond.src.js"></script>
 	<![endif]-->
 	<script src="../dist/polyfill.js"></script>
-	<script src="../node_modules/custom-input/dist/custom-input.js"></script>
+	<script src="https://rawgit.com/eight04/custom-input/master/dist/custom-input.js"></script>
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
