--- a/example/demo.html
+++ b/example/demo.html
@@ -8,8 +8,8 @@
 	<!--[if lte ie 8]>
 	<script src="https://rawgit.com/scottjehl/Respond/master/dest/respond.src.js"></script>
 	<![endif]-->
-	<script src="../dist/polyfill.js"></script>
-	<script src="https://rawgit.com/eight04/custom-input/master/dist/custom-input.js"></script>
+	<script src="https://unpkg.com/babel-polyfill@6.23.0/dist/polyfill.js"></script>
+	<script src="https://unpkg.com/custom-input@0.2.0/dist/custom-input.js"></script>
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
 
