--- a/example/demo.html
+++ b/example/demo.html
@@ -149,13 +149,13 @@
 	<div class="form-group">
 		<label>
 			UTC timezone
-			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-utc>
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="UTC">
 		</label>
 	</div>
 	<div class="form-group">
 		<label>
 			Custom Europe/Moscow timezone
-			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-utc="'+0300'">
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="'+0300'">
 		</label>
 	</div>
 	<div class="form-group">
