remove 'UTC' string

--- a/example/demo-1.5.html
+++ b/example/demo-1.5.html
@@ -149,7 +149,7 @@
 	<div class="form-group">
 		<label>
 			UTC timezone
-			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="UTC">
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="'+0000'">
 		</label>
 	</div>
 	<div class="form-group">
