--- a/example/demo.html
+++ b/example/demo.html
@@ -37,12 +37,12 @@
 			$scope.reset = function(){
 				$scope.data.myDate = new Date;
 				$scope.data.myDateString = "2000-01-01 00:00:00";
-			}
+			};
 
 			$scope.clear = function(){
 				$scope.data.myDate = null;
 				$scope.data.myDateString = null;
-			}
+			};
 		});
 	</script>
 </head>
@@ -149,7 +149,13 @@
 	<div class="form-group">
 		<label>
 			UTC timezone
-			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-utc>
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="+0000">
+		</label>
+	</div>
+	<div class="form-group">
+		<label>
+			Custom Europe/Moscow timezone
+			<input type="text" class="form-control" datetime="yyyy-MM-dd HH:mm:ssZ" ng-model="data.myDate" datetime-timezone="+0300">
 		</label>
 	</div>
 	<div class="form-group">
