--- a/example/demo.html
+++ b/example/demo.html
@@ -11,6 +11,13 @@
 	<script src="https://unpkg.com/babel-polyfill@6.23.0/dist/polyfill.js"></script>
 	<script src="../dist/datetime.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/eight04/end2end/master/dist/end2end.css">
+	
+	<script>
+		var a = {
+			a: function b() {}
+		};
+		console.log(typeof b);
+	</script>
 
 	<script>
 		angular.module("App", ["datetime"]).controller("myDate", function($scope, datetime, $locale){
